add: company get own information; chore(docs): update
