# backend/models/company_model/response/company_get_info_resp.go
@@ -1,0 +1,7 @@
+package response
+
+import "backend/models/company_model"
+
+type CompanyGetInfoResp struct {
+	company_model.CompanyInfo
+}
